--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="flexbox-portfolio-container">
             <div id="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1" >text</div>
-            <div class="flexbox-portfolio-item flexbox-portfolio-item-2" >text</div>
+            <div class="flexbox-portfolio-item flexbox-portfolio-item-2" >update text github test</div>
             <div class="flexbox-portfolio-item flexbox-portfolio-item-3" >text</div>
             <div class="flexbox-portfolio-item flexbox-portfolio-item-4" >text</div>
             <div class="flexbox-portfolio-item flexbox-portfolio-item-5" >text</div>
