--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     </head>
 
     <header>
-        header
+      <a id=logo href="index.html"><img src="images/katie-codes.png" alt="Katie Codes."></a>
+
+      <nav>
+        <a class=headertext href="contact.html"><img src="images/icon-email.png" alt="Contact form"></a>
+        <a target="_blank" class=headertext href="https://www.linkedin.com/in/katie-patterson-85010876/"><img src="images/icon-link.png" alt="Linkedin"></a>
+    </nav>
     </header>
 
     <body>
@@ -23,9 +28,6 @@
             <p class="about"> I’ve worked as a Digital Marketer, in-house Graphic Designer and multi-media creator, and an Online Platform Owner in the Travel Industry for 14 years.</p>
             <p class="about"> I have a Bachelor of Business Management majoring in Marketing from UQ, a Certificate 4 in Graphic Design and I'm currently studying with the awesome folks at <em>She Codes to learn HTML, CSS, Python, React and Django due for completion December 2020</em>. By the end I hope to be able to take an idea from concept all the way through the design process and into production.</p>
             <p id="calltoaction"class="about"> Looking for a great all-rounder to join your team? <br>Connect with me! </p>
-    <button class="flexbox-about-item" id="button" type="button">Download CV</button>
-    <button class="flexbox-about-item" id="button" href="https://www.linkedin.com/in/katie-patterson-85010876/" type="button">Linkedin</button> 
-    <button class="flexbox-about-item" id="button" href="contact.html" type="button">Email me</button>  
         </div>
 
         <div>
@@ -37,24 +39,53 @@
 
 
 
-    <div class="portfolio">
-
     <div>
-        <h3>My Portfolio</h3></div>
+
+    <div class="flexbox-portfolio-container">
+
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-1">
+                <img src="" alt="" class="image" width=350px height=350px>
+                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="project-1.html" target="_blank" class="portfolio-link-text">Project 1</a> 
+                </div>
+              </div>
 
 
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-2">
+                <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="project-1.html" target="_blank" class="portfolio-link-text">Project 2</a> 
+                </div>
+              </div>
 
-        <div class="flexbox-portfolio-container">
-            <div id="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1" >text</div>
-            <div class="flexbox-portfolio-item flexbox-portfolio-item-2" >update text github test</div>
-            <div class="flexbox-portfolio-item flexbox-portfolio-item-3" >text</div>
-            <div class="flexbox-portfolio-item flexbox-portfolio-item-4" >text</div>
-            <div class="flexbox-portfolio-item flexbox-portfolio-item-5" >text</div>
-            <div class="flexbox-portfolio-item flexbox-portfolio-item-6" >text</div>
-            <div class="flexbox-portfolio-item flexbox-portfolio-item-7" >text</div>
-            <div class="flexbox-portfolio-item flexbox-portfolio-item-8" >text</div>
-            <div class="flexbox-portfolio-item flexbox-portfolio-item-9" >text</div>
-        </div>
+
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-3">
+                <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="project-1.html" target="_blank" class="portfolio-link-text">Project 3</a> 
+                </div>
+              </div>
+
+
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-4">
+                <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="project-1.html" target="_blank" class="portfolio-link-text">Project 4</a> 
+                </div>
+              </div>
+
+
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
+                <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="project-1.html" target="_blank" class="portfolio-link-text">Project 5</a> 
+                </div>
+              </div>
+
+
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-6">
+                <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="project-1.html" target="_blank" class="portfolio-link-text">Project 6</a> 
+                </div>
+              </div>
+
+
 
 
     </div>
