--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,25 @@
         <link rel="stylesheet" href="styles.css">
     </head>
 
-    <body>
-        <header>
-            <h1>Get in touch!</h1>
-        </header>
+   
+    <header>
+        <a id=logo href="index.html"><img src="images/katie-codes.png" alt="Katie Codes."></a>
+  
+        <nav>
+          <a class=headertext href="contact.html"><img src="images/icon-email.png" alt="Contact form"></a>
+          <a target="_blank" class=headertext href="https://www.linkedin.com/in/katie-patterson-85010876/"><img src="images/icon-link.png" alt="Linkedin"></a>
+      </nav>
+      </header>
+
+
+          <body>
+          <div class="flexbox-about-container">
+            
+            <div class="flexbox-about-item flexbox-about-item-1">
+                <h1 class="about">Contact Me</h1>
+                <p class="about"> Hi, if you are looking for a freelance designer and coder contact me with the details on the below form and I'll get back to you! I'm also open to collaborate on projects :-)</p>
+                  
+        </div>
 
         <form action="https://formspree.io/xbjzzzej" method="POST">
             <div class="form-item">
