--- a/project-1.html
+++ b/project-1.html
@@ -10,16 +10,15 @@
     </head>
 
     <header>
-      <a id=logo href="index.html"><img src="images/katie-codes.png" alt="Katie Codes."></a>
-
-      <nav>
-        <a class=headertext href="contact.html"><img src="images/icon-email.png" alt="Contact form"></a>
-        <a target="_blank" class=headertext href="https://www.linkedin.com/in/katie-patterson-85010876/"><img src="images/icon-link.png" alt="Linkedin"></a>
-    </nav>
-    </header>
+        <a id=logo href="index.html"><img src="images/katie-codes.png" alt="Katie Codes."></a>
+        <nav>
+          <a class="headertext" href="index.html">Home</a>
+          <a class="headertext" href="contact.html">Contact</a>
+      </nav>
+      </header>
 
     <body>
- 
+
     <div class="flexbox-about-container">
             
         <div class="flexbox-about-item flexbox-about-item-1">
@@ -63,13 +62,17 @@
 
 
     </div>
+    </div>    
 
+</body>
 
-    <footer>
-        footer
+<footer>
+    <h4 class="footer-about">Katie Patterson 2020</h4>
+  
+      <nav>
+        <a class=socials href="contact.html"><img src="images/icon-email.png" alt="Contact form"></a>
+        <a class=socials target="_blank" href="https://www.linkedin.com/in/katie-patterson-85010876/"><img src="images/icon-link.png" alt="Linkedin"></a>
+    </nav>
     </footer>
 
-
-
-    
-    </div>
+</html>
