--- a/contact.html
+++ b/contact.html
@@ -22,14 +22,14 @@
           
           <div class="flexbox-about-item flexbox-about-item-1">
               <h1 class="about">Contact Me</h1>
-              <p class="about"> Hi, if you are looking for a freelance designer and coder contact me with the details on the below form and I'll get back to you! I'm also open to collaborate on projects :-)</p>
+              <p class="about"> Hi, if you are looking for a freelance designer and coder contact me with the details on the below form and I'll get back to you. I'm also building a portfolio at the moment and open to collaborate on projects!</p>
                 
       </div>
 
       <form action="https://formspree.io/xbjzzzej" method="POST">
           <div class="form-item">
               <label for="name">Name</label>
-              <input type="text" id="name" name="name" placeholder="test">
+              <input type="text" id="name" name="name">
           </div>
           <div class="form-item">
               <label for="mail">Email</label>
