update project page
min p width updated with ID

--- a/project-1.html
+++ b/project-1.html
@@ -21,7 +21,7 @@
 
     <div class="flexbox-about-container">
             
-        <div class="flexbox-about-item flexbox-about-item-1">
+        <div class="flexbox-about-item flexbox-about-item-1" id='project-text'>
             <h1 class="about">Project 1</h1>
             <p class="about"> Sugar plum jelly ice cream pie topping sweet roll. Danish danish chocolate tootsie roll chocolate tart sweet marzipan marshmallow. Tart ice cream cotton candy lollipop cake chocolate cake topping. Ice cream jujubes candy canes liquorice cake caramels.
 
