--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Contact Form</title>
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -45,12 +45,13 @@
       </form>
 
 
+
+
   </body>
 
 
-
   <footer>
-    <h4 class="footer-about">Katie Patterson 2020</h4>
+    <h3>Katie Patterson 2020</h3>
   
       <nav>
         <a class=socials href="contact.html"><img src="images/icon-email.png" alt="Contact form"></a>
