--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <meta name="author" content="Katie">
         <link rel="stylesheet" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
     </head>
 
 
@@ -27,7 +26,7 @@
             
         <div class="flexbox-about-item flexbox-about-item-1">
             <h1 class="about">Katie Patterson</h1>
-            <h2 class="about">Marketer > Designer > Platform Owner > Coder</h2>
+            <h2 class="about">Marketer / Designer / Platform Owner / Coder</h2>
             <p class="about"> I’ve worked as a Digital Marketer, in-house Graphic Designer and multi-media creator, and an Online Platform Owner in the Travel Industry for 14 years.</p>
             <p class="about"> I have a Bachelor of Business Management majoring in Marketing from UQ, a Certificate 4 in Graphic Design and I'm currently studying with the awesome folks at <em>She Codes to learn HTML, CSS, Python, React and Django due for completion December 2020</em>. By the end I hope to be able to take an idea from concept all the way through the design process and into production.</p>
             <p id="calltoaction"class="about"> Looking for a great all-rounder to join your team? Connect with me! </p>
@@ -95,18 +94,19 @@
 
  
 
-<footer>
-  <h4 class="footer-about">Katie Patterson 2020</h4>
-
-    <nav>
-      <a class=socials href="contact.html"><img src="images/icon-email.png" alt="Contact form"></a>
-      <a class=socials target="_blank" href="https://www.linkedin.com/in/katie-patterson-85010876/"><img src="images/icon-link.png" alt="Linkedin"></a>
-  </nav>
-  </footer>
+  <footer>
+    <h3>Katie Patterson 2020</h3>
+  
+      <nav>
+        <a class=socials href="contact.html"><img src="images/icon-email.png" alt="Contact form"></a>
+        <a class=socials target="_blank" href="https://www.linkedin.com/in/katie-patterson-85010876/"><img src="images/icon-link.png" alt="Linkedin"></a>
+    </nav>
+    </footer>
 
 
 
 
 
     </body>
+     <script src='script.js'></script>
 </html>
