Added mobile view images proj-1

--- a/project-1.html
+++ b/project-1.html
@@ -33,25 +33,45 @@
     <div>
     <div class="flexbox-project-container">
 
-            <div class="flexbox-project-item flexbox-project-item-1"> Image
+            <div class="flexbox-project-item flexbox-project-item-1"> 
+              <img src="images/proj-1-workbook-m-1.jpg" alt="" class="image" width=350px height=350px>
+              <!-- <img src="images/proj-1-workbook-d-1.jpg" alt="" class="image" width=722px height=350px> -->
               </div>
 
-              <div class="flexbox-project-item flexbox-project-item-2"> Image 
+              <div class="flexbox-project-item flexbox-project-item-2">
+              <img src="images/proj-1-workbook-m-2.jpg" alt="" class="image" width=350px height=350px>  
               </div>
 
-              <div class="flexbox-project-item flexbox-project-item-3"> Image
+              <div class="flexbox-project-item flexbox-project-item-3">
+              <img src="images/proj-1-workbook-m-3.jpg" alt="" class="image" width=350px height=350px>
               </div>
 
-              <div class="flexbox-project-item flexbox-project-item-4"> Image 
+              <div class="flexbox-project-item flexbox-project-item-4">
+              <img src="images/proj-1-workbook-m-4.jpg" alt="" class="image" width=350px height=350px>
               </div>
 
-              <div class="flexbox-project-item flexbox-project-item-5"> Image 
+              <div class="flexbox-project-item flexbox-project-item-5">
+              <img src="images/proj-1-workbook-m-5.jpg" alt="" class="image" width=350px height=350px>
               </div>
 
-              <div class="flexbox-project-item flexbox-project-item-6"> Image 
+              <div class="flexbox-project-item flexbox-project-item-6">
+              <img src="images/proj-1-workbook-m-6.jpg" alt="" class="image" width=350px height=350px>
               </div>
 
-              <div class="flexbox-project-item flexbox-project-item-7"> Image 
+              <div class="flexbox-project-item flexbox-project-item-7">
+              <img src="images/proj-1-workbook-m-7.jpg" alt="" class="image" width=350px height=350px>
+              </div>
+
+              <div class="flexbox-project-item flexbox-project-item-7">
+              <img src="images/proj-1-workbook-m-8.jpg" alt="" class="image" width=350px height=350px>
+              </div>
+              
+              <div class="flexbox-project-item flexbox-project-item-7">
+              <img src="images/proj-1-workbook-m-9.jpg" alt="" class="image" width=350px height=350px>
+              </div>
+
+              <div class="flexbox-project-item flexbox-project-item-7">
+              <img src="images/proj-1-workbook-m-10.jpg" alt="" class="image" width=350px height=350px>
               </div>
         </div>
     
