--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <div class="flexbox-portfolio-container">
 
               <div class="container flexbox-portfolio-item flexbox-portfolio-item-1">
-                <img src="" alt="" class="image" width=350px height=350px>
+                <img src="images/proj-1-workbook-m-1.jpg" alt="" class="image" width=350px height=350px>
                 <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="project-1.html" target="_blank" class="portfolio-link-text">Project 1</a> 
+                    <a href="project-1.html" target="_blank" class="portfolio-link-text">PRINT/GET SABRE FIT</a> 
                 </div>
               </div>
 
