--- a/project-1.html
+++ b/project-1.html
@@ -23,10 +23,9 @@
     <div class="flexbox-about-container">
             
         <div class="flexbox-about-item flexbox-about-item-1" id='project-text'>
-            <h1 class="project-text">Project 1</h1>
-            <p class="project-text"> Sugar plum jelly ice cream pie topping sweet roll. Danish danish chocolate tootsie roll chocolate tart sweet marzipan marshmallow. Tart ice cream cotton candy lollipop cake chocolate cake topping. Ice cream jujubes candy canes liquorice cake caramels.
-
-              Bonbon candy canes tart sugar plum sweet roll brownie gingerbread gingerbread. Cookie muffin fruitcake marshmallow sweet roll oat cake powder sesame snaps. Gummi bears candy canes jelly-o cheesecake chocolate bar bear claw cake muffin.</p>
+            <h1 class="project-text">GET SABRE FIT</h1>
+            <p class="project-text"> Flight Centre Travel Group rolled out a new Booking reservation system called Sabre for 6000+ Retail Travel Consutlants in 2016. 
+              <br>I completed a Freelance Graphic Design job for them that included a concept creation for the onboarding consutlants, classroom materials and a 50 page workbook to be completed in training. I created an inspirational 'Get Sabre Fit' concept based on the iconic Colour run event, for a clean design with bright energetic pops of colour. Please see a sample of some of the layouts and posters for this job below.</p>
               
             </div>
           </div>
@@ -41,6 +40,10 @@
               <div class="flexbox-project-item flexbox-project-item-2">
               <img src="images/proj-1-workbook-m-2.jpg" alt="" class="image" width=350px height=350px>  
               </div>
+
+              <div class="flexbox-project-item flexbox-project-item-2">
+                <img src="images/proj-1-workbook-m-11.jpg" alt="" class="image" width=350px height=350px>  
+                </div>
 
               <div class="flexbox-project-item flexbox-project-item-3">
               <img src="images/proj-1-workbook-m-3.jpg" alt="" class="image" width=350px height=350px>
