updated proj 2-8 with content

--- a/index.html
+++ b/index.html
@@ -48,46 +48,66 @@
               <div class="container flexbox-portfolio-item flexbox-portfolio-item-1">
                 <img src="images/proj-1-workbook-m-1.jpg" alt="" class="image" width=350px height=350px>
                 <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="project-1.html" target="_blank" class="portfolio-link-text">PRINT/GET SABRE FIT</a> 
+                    <a href="project-1.html" target="_blank" class="portfolio-link-text">PRINT / FLIGHT CENTRE / GET SABRE FIT</a> 
                 </div>
               </div>
 
 
               <div class="container flexbox-portfolio-item flexbox-portfolio-item-2">
-                <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="project-1.html" target="_blank" class="portfolio-link-text">Project 2</a> 
+                <img src="images/proj-2-infographic-m-3.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="project-2.html" target="_blank" class="portfolio-link-text">INFOGRAPHIC / FLIGHT CENTRE / ONBOARDING</a> 
                 </div>
               </div>
 
 
               <div class="container flexbox-portfolio-item flexbox-portfolio-item-3">
-                <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="project-1.html" target="_blank" class="portfolio-link-text">Project 3</a> 
+                <img src="images/proj-6.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="https://drive.google.com/file/d/1_Qj3Km1i_A2J0QJgSxTxUgten2FAACpp/view?usp=sharing" target="_blank" class="portfolio-link-text">ANIMATION / FLIGHT CENTRE / ONBOARDING </a> 
                 </div>
               </div>
 
 
               <div class="container flexbox-portfolio-item flexbox-portfolio-item-4">
-                <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="project-1.html" target="_blank" class="portfolio-link-text">Project 4</a> 
+                <img src="images/proj-4-brand-d-2.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="project-4.html" target="_blank" class="portfolio-link-text">BRANDING / BEBE'S COUNTRY WEDDINGS</a> 
                 </div>
               </div>
 
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-3">
+                <img src="images/proj-3-m-1.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="project-3.html" target="_blank" class="portfolio-link-text">BRANDING / INFINITY / SUPERUSER SUMMIT</a> 
+                </div>
+              </div>
+
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
+                <img src="images/proj-5.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="https://xd.adobe.com/view/8078b1b5-2e0e-41e1-5844-0d36adf5cbdb-f649/?hints=off" target="_blank" class="portfolio-link-text">UI UX / INFINITY DOCUMENTATION APP</a> 
+                </div>
+              </div>
+
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
+                <img src="images/proj-7-9.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="project-7.html" target="_blank" class="portfolio-link-text">DJANGO / STUDENT PROJECT / SHE CODES NEWS</a> 
+                </div>
+              </div>
+
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
+                <img src="images/proj-8-1.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="project-8.html" target="_blank" class="portfolio-link-text">PYTHON / STUDENT PROJECT / DATA PROCESSING</a> 
+                </div>
+              </div>
 
               <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
                 <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="project-1.html" target="_blank" class="portfolio-link-text">Project 5</a> 
+                    <a href="" target="_blank" class="portfolio-link-text">DJANGO REST FRAMEWORK / SHE CODES STUDENT PROJECT / CROWDFUNDONG WEBSITE BACKEND</a> 
                 </div>
               </div>
 
-
-              <div class="container flexbox-portfolio-item flexbox-portfolio-item-6">
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
                 <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="project-1.html" target="_blank" class="portfolio-link-text">Project 6</a> 
+                    <a href="" target="_blank" class="portfolio-link-text">REACT / SHE CODES STUDENT PROJECT / CROWDFUNDONG WEBSITE FRONTEND</a> 
                 </div>
               </div>
-
-
 
 
     </div>
