--- a/project-1.html
+++ b/project-1.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Project 1</title>
+        <title>Get Sabre Fit</title>
         <meta name="description" content="Portfolio">
         <meta name="author" content="Katie">
         <link rel="stylesheet" href="styles.css">
