Update project descriptions

--- a/project-1.html
+++ b/project-1.html
@@ -24,8 +24,8 @@
             
         <div class="flexbox-about-item flexbox-about-item-1" id='project-text'>
             <h1 class="project-text">GET SABRE FIT</h1>
-            <p class="project-text"> Flight Centre Travel Group rolled out a new Booking reservation system called Sabre for 6000+ Retail Travel Consutlants in 2016. 
-              <br>I completed a Freelance Graphic Design job for them that included a concept creation for the onboarding consutlants, classroom materials and a 50 page workbook to be completed in training. I created an inspirational 'Get Sabre Fit' concept based on the iconic Colour run event, for a clean design with bright energetic pops of colour. Please see a sample of some of the layouts and posters for this job below.</p>
+            <p class="project-text"> Flight Centre Travel Group rolled out a new booking reservation system called Sabre for 6000+ Retail Travel Consutlants in 2016. 
+              <br>I completed a Freelance Graphic Design job for them that included a concept creation and classroom materials that included a 50 page workbook. I created an inspirational 'Get Sabre Fit' concept based on the iconic colour run event, with a clean design including bright energetic pops of colour. Please see a sample of some of the layouts and posters for this job below.</p>
               
             </div>
           </div>
