--- a/project-2.html
+++ b/project-2.html
@@ -24,7 +24,7 @@
             
         <div class="flexbox-about-item flexbox-about-item-1" id='project-text'>
             <h1 class="project-text">INFOGRAPHIC</h1>
-            <p class="project-text"> This was a really fun freelance Graphic Design job to create a set of Travel Consultant characters for use in training materials including this Infographic for the Flight Centre Learning Centre. I consulteded with the trainers on what the onboarding process was for consultanted and re-created the timeline in this Infographoc so they would easily follow along with the process of training and starting in store as a novice consultant.</p>
+            <p class="project-text"> This was a really fun freelance Graphic Design job to create a set of Travel Consultant characters for use in training materials including this Infographic for the Flight Centre Learning Centre. I consulted with the trainers on what the onboarding process was for consultants and re-created the timeline in this Infographic so they could easily follow along with the process of training and starting in store as a novice consultant. This work continued onto a short animated video, please see next item from the home page.</p>
               
             </div>
           </div>
