--- a/project-3.html
+++ b/project-3.html
@@ -24,7 +24,7 @@
             
         <div class="flexbox-about-item flexbox-about-item-1" id='project-text'>
             <h1 class="project-text">SuperUser Summit</h1>
-            <p class="project-text"> While working for Infinity Holidays, I organised an International SuperUser Summit for our best system people from 6 countries around the world to come to Brisbane and collaborate and learn from each other. As part of that I created a logo for the event and a powerpoint template for all the speaker presentations.</p>
+            <p class="project-text"> While working for Infinity Holidays, I organised an international SuperUser Summit for our best system people from 6 countries around the world to come to Brisbane and collaborate and learn from each other. As part of that work, I created branding for the event including a logo for use in the eDM series prior to the event and all the printed collatoral. Please see below the powerpoint template for all the speaker presentations.</p>
               
             </div>
           </div>
