--- a/project-7.html
+++ b/project-7.html
@@ -24,7 +24,7 @@
             
         <div class="flexbox-about-item flexbox-about-item-1" id='project-text'>
             <h1 class="project-text">DJANGO</h1>
-            <p class="project-text"> The introductory Django assisnment was to create a news site where users could create a profile and write stories. The learned skills along the way were understand how Django can be used to create websites, and how to implement models, views and URLs, and understand how the database worked and upload images. https://github.com/katie-codes/she-codes-news-project</p>
+            <p class="project-text"> The introductory Django assignment has been to create a news site where users could create a profile and submit stories. The skills learned along the way were understand how Django can be used to create websites, and how to implement models, views and URLs, and understand how the database worked and upload images. https://github.com/katie-codes/she-codes-news-project</p>
               
             </div>
           </div>
