--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
               </div>
 
-              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
+              <!-- <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
                 <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
                     <a href="" target="_blank" class="portfolio-link-text">DJANGO REST FRAMEWORK / SHE CODES STUDENT PROJECT / CROWDFUNDONG WEBSITE BACKEND</a> 
                 </div>
@@ -107,7 +107,7 @@
                 <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
                     <a href="" target="_blank" class="portfolio-link-text">REACT / SHE CODES STUDENT PROJECT / CROWDFUNDONG WEBSITE FRONTEND</a> 
                 </div>
-              </div>
+              </div> -->
 
 
     </div>
