--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
               <div class="container flexbox-portfolio-item flexbox-portfolio-item-1">
                 <img src="images/proj-1-workbook-m-1.jpg" alt="" class="image" width=350px height=350px>
                 <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="project-1.html" target="_blank" class="portfolio-link-text">PRINT / FLIGHT CENTRE / GET SABRE FIT</a> 
+                    <a href="get-sabre-fit.html" target="_blank" class="portfolio-link-text">PRINT / FLIGHT CENTRE / GET SABRE FIT</a> 
                 </div>
               </div>
 
 
               <div class="container flexbox-portfolio-item flexbox-portfolio-item-2">
                 <img src="images/proj-2-infographic-m-3.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="project-2.html" target="_blank" class="portfolio-link-text">INFOGRAPHIC / FLIGHT CENTRE / ONBOARDING</a> 
+                    <a href="infographic.html" target="_blank" class="portfolio-link-text">INFOGRAPHIC / FLIGHT CENTRE / ONBOARDING</a> 
                 </div>
               </div>
 
@@ -93,7 +93,25 @@
 
               <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
                 <img src="images/proj-8-1.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="project-8.html" target="_blank" class="portfolio-link-text">PYTHON / STUDENT PROJECT / DATA PROCESSING</a> 
+                    <a href="python.html" target="_blank" class="portfolio-link-text">PYTHON / STUDENT PROJECT / DATA PROCESSING</a> 
+                </div>
+              </div>
+
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
+                <img src="images/proj-11.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="https://www.stzautomotive.com.au" target="_blank" class="portfolio-link-text">MANAGED WORDPRESS SITE / STZAUTOMOTIVE</a> 
+                </div>
+              </div>
+
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
+                <img src="images/proj-1010.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="paper-planes.html" target="_blank" class="portfolio-link-text">CORPORATE TYPESETTING / eDM / COMMUNICATIONS / PAPER PLANES</a> 
+                </div>
+              </div>
+
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
+                <img src="images/proj-9-hero.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="project-f1.html" target="_blank" class="portfolio-link-text">CORPORATE LAUNCH MATERIALS / LEARNING OPPORTUNITY / F1</a> 
                 </div>
               </div>
 
@@ -105,7 +123,7 @@
 
               <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
                 <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="" target="_blank" class="portfolio-link-text">REACT / SHE CODES STUDENT PROJECT / CROWDFUNDONG WEBSITE FRONTEND</a> 
+                    <a href="" target="_blank" class="portfolio-link-text">REACT / SHE CODES STUDENT PROJECT / CROWDFUNDONG WEBSITE FRONTEND</a>  -->
                 </div>
               </div> -->
 
