--- a/index.html
+++ b/index.html
@@ -111,7 +111,13 @@
 
               <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
                 <img src="images/proj-9-hero.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
-                    <a href="project-f1.html" target="_blank" class="portfolio-link-text">CORPORATE LAUNCH MATERIALS / LEARNING OPPORTUNITY / F1</a> 
+                    <a href="project-f1.html" target="_blank" class="portfolio-link-text">CONCEPT LEARNING OPPORTUNITY / F1</a> 
+                </div>
+              </div>
+
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
+                <img src="images/proj-helpinghand.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="helping-hand.html" target="_blank" class="portfolio-link-text">INFINITY HOLIDAYS / ANALYTICS / HELPING HAND</a> 
                 </div>
               </div>
 
@@ -125,7 +131,7 @@
                 <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
                     <a href="" target="_blank" class="portfolio-link-text">REACT / SHE CODES STUDENT PROJECT / CROWDFUNDONG WEBSITE FRONTEND</a>  -->
                 </div>
-              </div> -->
+              </div> 
 
 
     </div>
