--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
                 </div>
               </div>
 
+              <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
+                <img src="images/proj-pres-hero.jpg" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
+                    <a href="infinity-pres.html" target="_blank" class="portfolio-link-text">INFINITY HOLIDAYS / AWARDS NIGHT / PRESENTATION</a> 
+                </div>
+              </div>
+
               <!-- <div class="container flexbox-portfolio-item flexbox-portfolio-item-5">
                 <img src="" alt="" class="image" width=350px height=350px>                <div class="overlay" class="flexbox-portfolio-item flexbox-portfolio-item-1">
                     <a href="" target="_blank" class="portfolio-link-text">DJANGO REST FRAMEWORK / SHE CODES STUDENT PROJECT / CROWDFUNDONG WEBSITE BACKEND</a> 
